deploy/asapo_services_kubernetes/deployments/authorizer.yaml
apiVersion: v1
kind: Service
metadata:
  name: authorizer
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 5007
  selector:
    app: authorizer

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-authorizer
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/whitelist-source-range: 131.169.0.0/16
spec:
  rules:
    - host: "*.desy.de"
      http:
        paths:
          - path: /authorizer(/|$)(.*)
            backend:
              serviceName: authorizer
              servicePort: 5007
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authorizer-deployment
  labels:
    app: authorizer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authorizer
  template:
    metadata:
      labels:
        app: authorizer
    spec:
      volumes:
        - name: all-in-one
          projected:
            sources:
              - configMap:
                  name: authorizer-config
              - secret:
                  name: auth-secret
      containers:
        - name: authorizer
          image: "yakser/asapo-authorizer-dev:develop.19.09-210-gd2bfa78"
          command: ["/asapo-authorizer"]
          args: ["-config", "/etc/authorizer/authorizer.json"]
          ports:
            - containerPort: 5007
          volumeMounts:
            - name: all-in-one
              mountPath: "/etc/authorizer"
